# Python-for-developers-homework

./: README.md  pyproject.toml
homework_1/: Task.py
homework_2/: Task.py
homework_3/: Task.py
homework_4/: Task.py
homework_5/: Task.py
